--- a/main.css
+++ b/main.css
@@ -1,371 +1,153 @@
-body{
+body
+{
+    font-family: arial;
+}
+
+/* Sets the background image for the wheel */
+td.the_wheel
+{
+    background-image: url(./wheel_back.png);
+    background-position: center;
+    background-repeat: none;
+}
+
+/* Do some css reset on selected elements */
+h1, p
+{
+    margin: 0;
+}
+
+div.power_controls
+{
+    margin-right:70px;
+}
+
+div.html5_logo
+{
+    margin-left:70px;
+}
+
+/* Styles for the power selection controls */
+table.power
+{
+    background-color: #cccccc;
+    cursor: pointer;
+    border:1px solid #333333;
+}
+
+table.power th
+{
+    background-color: white;
+    cursor: default;
+}
+
+td.pw1
+{
+    background-color: #6fe8f0;
+}
+
+td.pw2
+{
+    background-color: #86ef6f;
+}
+
+td.pw3
+{
+    background-color: #ef6f6f;
+}
+
+/* Style applied to the spin button once a power has been selected */
+.clickable
+{
+    cursor: pointer;
+}
+
+/* Other misc styles */
+.margin_bottom
+{
+    margin-bottom: 5px;
+}
+.animation {
+    animation: wheel 2s infinite ease-in-out;
+}
+
+#spin_button {
+    cursor: pointer;
+}
+
+#prize {
+    position: absolute;
+    font-size: 30px;
+    color: #fff;
+    cursor: pointer;
+    border: 2px dashed;
+    top: 47%;
+    left: 50%;
+    transform: translate(-50%);
+}
+.show {
+    display: flex;
+}
+.hide {
+    display: none;
+}
+.wrapper{
+    width:100%;
+    min-height:100%;
+    transition: 0.3s;
+    background-color: rgba(0,0,0,0.5);
+    overflow:hidden;
+    position:fixed;
+    top:0px;
+}
+.wrap {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width:100%;
+}
+
+#canvas {
+    z-index: 1;
+}
+
+#wheel-back {
+    z-index: 1;
+    position: absolute;
+}
+
+@keyframes wheel {
+    from {
+        transform: scale(1);
+        transition: 0.3s;
+    }
+    50% {
+        transform: scale(1.3);
+        transition: 0.3s;
+    }
+    to {
+        transform: scale(1);
+        transition: 0.3s;
+    }
+}
+
+.hb-wrapper {
+    background-color: white;
+    color: black;
+    width: 100%;
+    height: 100%;
     margin: 0;
     padding: 0;
-}
-.controller {
-    position: relative;
-    margin: 10px;
-  }
-  .controller button {
-    line-height: 30px;
-  }
-  .controller .num {
-    width: 30px;
-  }
-  #roulette {
-    display: flex;
-    position: relative;
-    -webkit-animation-timing-function: cubic-bezier(0, 0.4, 0.4, 1.04);
-            animation-timing-function: cubic-bezier(0, 0.4, 0.4, 1.04);
-    -webkit-animation-duration: 1.8s;
-            animation-duration: 1.8s;
-    -webkit-animation-fill-mode: forwards;
-            animation-fill-mode: forwards;
-    -webkit-animation-iteration-count: 1;
-            animation-iteration-count: 1;
-    width: 308px;
-    height: 308px;
-    border-radius: 50%;
-    overflow: hidden;
-    counter-reset: num;
-  }
-  #roulette.number-1 {
-    -webkit-animation-name: 'number-1';
-            animation-name: 'number-1';
-  }
-  #roulette.number-2 {
-    -webkit-animation-name: 'number-2';
-            animation-name: 'number-2';
-  }
-  #roulette.number-3 {
-    -webkit-animation-name: 'number-3';
-            animation-name: 'number-3';
-  }
-  #roulette.number-4 {
-    -webkit-animation-name: 'number-4';
-            animation-name: 'number-4';
-  }
-  #roulette.number-5 {
-    -webkit-animation-name: 'number-5';
-            animation-name: 'number-5';
-  }
-  #roulette.number-6 {
-    -webkit-animation-name: 'number-6';
-            animation-name: 'number-6';
-  }
-  #roulette.number-7 {
-    -webkit-animation-name: 'number-7';
-            animation-name: 'number-7';
-  }
-  #roulette.number-8 {
-    -webkit-animation-name: 'number-8';
-            animation-name: 'number-8';
-  }
-  #roulette.number-9 {
-    -webkit-animation-name: 'number-9';
-            animation-name: 'number-9';
-  }
-  #roulette.number-10 {
-    -webkit-animation-name: 'number-10';
-            animation-name: 'number-10';
-  }
-  #roulette::after {
-    content: "";
-    display: block;
-    width: 80px;
-    height: 80px;
-    background-color: #fff;
-    border-radius: 50%;
-    margin: auto;
-    top: 0;
-    right: 0;
-    bottom: 0;
-    left: 0;
     position: absolute;
   }
-  #roulette li {
-    top: 0;
-    right: 0;
-    left: 0;
-    margin: auto;
+  
+.hb-wrapper h1 {
     position: absolute;
-    display: block;
-    width: 100px;
-    height: 154px;
-    transform-origin: 50px 154px;
-  }
-  #roulette li::before {
-    top: 0;
-    left: 0;
-    position: absolute;
-    display: inline-block;
-    content: "";
-    width: 0;
-    height: 0;
-    border-style: solid;
-    border-width: 154px 50px;
-    z-index: 0;
-  }
-  #roulette li::after {
-    counter-increment: num;
-    content: counter(num);
-    z-index: 5;
-    position: absolute;
-    display: block;
-    width: 100px;
-    text-align: center;
-    line-height: 40px;
-    font-size: 20px;
-    color: #fff;
-    font-weight: bold;
-  }
-  #roulette li:nth-of-type(1) {
-    transform: rotate(36deg);
-  }
-  #roulette li:nth-of-type(1)::before {
-    border-color: #fff100 transparent transparent;
-  }
-  #roulette li:nth-of-type(2) {
-    transform: rotate(72deg);
-  }
-  #roulette li:nth-of-type(2)::before {
-    border-color: #f39800 transparent transparent;
-  }
-  #roulette li:nth-of-type(3) {
-    transform: rotate(108deg);
-  }
-  #roulette li:nth-of-type(3)::before {
-    border-color: #eb6100 transparent transparent;
-  }
-  #roulette li:nth-of-type(4) {
-    transform: rotate(144deg);
-  }
-  #roulette li:nth-of-type(4)::before {
-    border-color: #e60012 transparent transparent;
-  }
-  #roulette li:nth-of-type(5) {
-    transform: rotate(180deg);
-  }
-  #roulette li:nth-of-type(5)::before {
-    border-color: #e4007f transparent transparent;
-  }
-  #roulette li:nth-of-type(6) {
-    transform: rotate(216deg);
-  }
-  #roulette li:nth-of-type(6)::before {
-    border-color: #601986 transparent transparent;
-  }
-  #roulette li:nth-of-type(7) {
-    transform: rotate(252deg);
-  }
-  #roulette li:nth-of-type(7)::before {
-    border-color: #0b318f transparent transparent;
-  }
-  #roulette li:nth-of-type(8) {
-    transform: rotate(288deg);
-  }
-  #roulette li:nth-of-type(8)::before {
-    border-color: #036eb8 transparent transparent;
-  }
-  #roulette li:nth-of-type(9) {
-    transform: rotate(324deg);
-  }
-  #roulette li:nth-of-type(9)::before {
-    border-color: #00913a transparent transparent;
-  }
-  #roulette li:nth-of-type(10) {
-    transform: rotate(360deg);
-  }
-  #roulette li:nth-of-type(10)::before {
-    border-color: #8fc31f transparent transparent;
-  }
-  @-webkit-keyframes number-1 {
-    from {
-      transform: rotate(0);
-    }
-    to {
-      transform: rotate(3204deg);
-    }
-  }
-  @keyframes number-1 {
-    from {
-      transform: rotate(0);
-    }
-    to {
-      transform: rotate(3204deg);
-    }
-  }
-  @-webkit-keyframes number-2 {
-    from {
-      transform: rotate(0);
-    }
-    to {
-      transform: rotate(3168deg);
-    }
-  }
-  @keyframes number-2 {
-    from {
-      transform: rotate(0);
-    }
-    to {
-      transform: rotate(3168deg);
-    }
-  }
-  @-webkit-keyframes number-3 {
-    from {
-      transform: rotate(0);
-    }
-    to {
-      transform: rotate(3132deg);
-    }
-  }
-  @keyframes number-3 {
-    from {
-      transform: rotate(0);
-    }
-    to {
-      transform: rotate(3132deg);
-    }
-  }
-  @-webkit-keyframes number-4 {
-    from {
-      transform: rotate(0);
-    }
-    to {
-      transform: rotate(3096deg);
-    }
-  }
-  @keyframes number-4 {
-    from {
-      transform: rotate(0);
-    }
-    to {
-      transform: rotate(3096deg);
-    }
-  }
-  @-webkit-keyframes number-5 {
-    from {
-      transform: rotate(0);
-    }
-    to {
-      transform: rotate(3060deg);
-    }
-  }
-  @keyframes number-5 {
-    from {
-      transform: rotate(0);
-    }
-    to {
-      transform: rotate(3060deg);
-    }
-  }
-  @-webkit-keyframes number-6 {
-    from {
-      transform: rotate(0);
-    }
-    to {
-      transform: rotate(3024deg);
-    }
-  }
-  @keyframes number-6 {
-    from {
-      transform: rotate(0);
-    }
-    to {
-      transform: rotate(3024deg);
-    }
-  }
-  @-webkit-keyframes number-7 {
-    from {
-      transform: rotate(0);
-    }
-    to {
-      transform: rotate(2988deg);
-    }
-  }
-  @keyframes number-7 {
-    from {
-      transform: rotate(0);
-    }
-    to {
-      transform: rotate(2988deg);
-    }
-  }
-  @-webkit-keyframes number-8 {
-    from {
-      transform: rotate(0);
-    }
-    to {
-      transform: rotate(2952deg);
-    }
-  }
-  @keyframes number-8 {
-    from {
-      transform: rotate(0);
-    }
-    to {
-      transform: rotate(2952deg);
-    }
-  }
-  @-webkit-keyframes number-9 {
-    from {
-      transform: rotate(0);
-    }
-    to {
-      transform: rotate(2916deg);
-    }
-  }
-  @keyframes number-9 {
-    from {
-      transform: rotate(0);
-    }
-    to {
-      transform: rotate(2916deg);
-    }
-  }
-  @-webkit-keyframes number-10 {
-    from {
-      transform: rotate(0);
-    }
-    to {
-      transform: rotate(2880deg);
-    }
-  }
-  @keyframes number-10 {
-    from {
-      transform: rotate(0);
-    }
-    to {
-      transform: rotate(2880deg);
-    }
-  }
-  #msg {
-      position: absolute;
-      font-size: 30px;
-      color: #000;
-      cursor: pointer;
-      border: 2px dashed;
-  }
-  .show {
-      display: flex;
-      position: absolute;
-      z-index: 10;
-  }
-  .hide {
-      display: none;
-  }
-  .wrapper{
-      width:100%;
-      min-height:100%;
-      transition: 0.3s;
-      background-color: rgba(0,0,0,0.5);
-      overflow:hidden;
-      position:fixed;
-      top:0px;
-  }
-  .wrap {
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      width:100%;
+    top: 30%;
+    left: calc(50vw - 150px);
+    z-index: 9999;
+    font-family: 'Cabin', sans-serif;
+    font-size: 3em;
+    color: #006BD3;
+    text-shadow: 0 0 10px #ccc;
   }
