--- a/main.css
+++ b/main.css
@@ -68,7 +68,14 @@ td.pw3
     margin-bottom: 5px;
 }
 .animation {
-    animation: wheel 2s infinite ease-in-out;
+    /* animation: wheel 2s infinite ease-in-out; */
+}
+
+#icon {
+    z-index: 10;
+    transform: scale(-0.5) rotate(-90deg);
+    position: relative;
+    bottom: 225px;
 }
 
 #spin_button {
@@ -109,6 +116,7 @@ td.pw3
 
 #canvas {
     z-index: 1;
+    position: absolute;
 }
 
 #wheel-back {
@@ -116,7 +124,7 @@ td.pw3
     position: absolute;
 }
 
-@keyframes wheel {
+/* @keyframes wheel {
     from {
         transform: scale(1);
         transition: 0.3s;
@@ -129,7 +137,7 @@ td.pw3
         transform: scale(1);
         transition: 0.3s;
     }
-}
+} */
 
 .hb-wrapper {
     background-color: white;
