--- a/main.css
+++ b/main.css
@@ -1,133 +1,124 @@
-body
-{
-    font-family: arial;
-}
-
-/* Sets the background image for the wheel */
-td.the_wheel
-{
-    background-image: url(./wheel_back.png);
-    background-position: center;
-    background-repeat: none;
+body {
+	font-family: arial;
 }
 
 /* Do some css reset on selected elements */
-h1, p
-{
-    margin: 0;
+h1,
+p {
+	margin: 0;
 }
 
-div.power_controls
-{
-    margin-right:70px;
+div.power_controls {
+	margin-right: 70px;
 }
 
-div.html5_logo
-{
-    margin-left:70px;
+div.html5_logo {
+	margin-left: 70px;
 }
 
 /* Styles for the power selection controls */
-table.power
-{
-    background-color: #cccccc;
-    cursor: pointer;
-    border:1px solid #333333;
+table.power {
+	background-color: #cccccc;
+	cursor: pointer;
+	border: 1px solid #333333;
 }
 
-table.power th
-{
-    background-color: white;
-    cursor: default;
+table.power th {
+	background-color: white;
+	cursor: default;
 }
 
-td.pw1
-{
-    background-color: #6fe8f0;
+td.pw1 {
+	background-color: #6fe8f0;
 }
 
-td.pw2
-{
-    background-color: #86ef6f;
+td.pw2 {
+	background-color: #86ef6f;
 }
 
-td.pw3
-{
-    background-color: #ef6f6f;
+td.pw3 {
+	background-color: #ef6f6f;
 }
 
 /* Style applied to the spin button once a power has been selected */
-.clickable
-{
-    cursor: pointer;
+.clickable {
+	cursor: pointer;
 }
 
 /* Other misc styles */
-.margin_bottom
-{
-    margin-bottom: 5px;
+.margin_bottom {
+	margin-bottom: 5px;
 }
 .animation {
-    /* animation: wheel 2s infinite ease-in-out; */
+	/* animation: wheel 2s infinite ease-in-out; */
 }
 
 #icon {
-    z-index: 10;
-    transform: scale(-0.5) rotate(-90deg);
-    position: relative;
-    bottom: 225px;
+	z-index: 10;
+	transform: scale(-0.5) rotate(-90deg);
+	position: relative;
+	bottom: 225px;
 }
 
 #spin_button {
-    cursor: pointer;
+	cursor: pointer;
 }
 
 #prize {
-    position: absolute;
-    font-size: 30px;
-    color: #fff;
-    cursor: pointer;
-    border: 2px dashed;
-    top: 47%;
-    left: 50%;
-    transform: translate(-50%);
+	position: absolute;
+	font-size: 30px;
+	color: #fff;
+	cursor: pointer;
+	border: 2px dashed;
+	top: 47%;
+	left: 50%;
+	transform: translate(-50%);
 }
 .show {
-    display: flex;
+	display: flex;
 }
 .hide {
-    display: none;
+	display: none;
 }
-.wrapper{
-    width:100%;
-    min-height:100%;
-    transition: 0.3s;
-    background-color: rgba(0,0,0,0.5);
-    overflow:hidden;
-    position:fixed;
-    top:0px;
+.wrapper {
+	width: 100%;
+	min-height: 100%;
+	transition: 0.3s;
+	overflow: hidden;
+	position: fixed;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	top: 0px;
 }
 .wrap {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    width:100%;
+	display: inline-block;
+	position: relative;
 }
 
-#canvas {
-    z-index: 1;
-    position: absolute;
+.wrap::before {
+	content: "";
+	width: calc(100% - 2px);
+	height: calc(100% - 2px);
+	border: 6px solid black;
+	position: absolute;
+	left: 0;
+	top: 0;
+	border-radius: 50%;
+	box-sizing: border-box;
 }
 
-#wheel-back {
-    z-index: 1;
-    position: absolute;
-}
-
-#wheel-arrow {
-    z-index: 2;
-    position: relative;
-    bottom: 220px;
+.wrap::after {
+	content: "";
+	width: 0;
+	height: 0;
+	border-left: 25px solid transparent;
+	border-right: 25px solid transparent;
+	border-top: 50px solid #2535f1;
+	position: absolute;
+	left: 50%;
+	top: 0;
+	transform: translate(-50%, -50%);
 }
 
 /* @keyframes wheel {
@@ -146,22 +137,23 @@ td.pw3
 } */
 
 .hb-wrapper {
-    background-color: white;
-    color: black;
-    width: 100%;
-    height: 100%;
-    margin: 0;
-    padding: 0;
-    position: absolute;
-  }
-  
+	width: 100%;
+	height: 100%;
+	margin: 0;
+	padding: 0;
+	position: absolute;
+	top: 0;
+	left: 0;
+	pointer-events: none;
+}
+
 .hb-wrapper h1 {
-    position: absolute;
-    top: 30%;
-    left: calc(50vw - 150px);
-    z-index: 9999;
-    font-family: 'Cabin', sans-serif;
-    font-size: 3em;
-    color: #006BD3;
-    text-shadow: 0 0 10px #ccc;
-  }
+	position: absolute;
+	top: 30%;
+	left: calc(50vw - 150px);
+	z-index: 9999;
+	font-family: "Cabin", sans-serif;
+	font-size: 3em;
+	color: #006bd3;
+	text-shadow: 0 0 10px #ccc;
+}
