--- a/main.css
+++ b/main.css
@@ -1,3 +1,4 @@
+/*Wheel style*/
 body {
 	font-family: arial;
 }
@@ -28,18 +29,6 @@ table.power th {
 	cursor: default;
 }
 
-td.pw1 {
-	background-color: #6fe8f0;
-}
-
-td.pw2 {
-	background-color: #86ef6f;
-}
-
-td.pw3 {
-	background-color: #ef6f6f;
-}
-
 /* Style applied to the spin button once a power has been selected */
 .clickable {
 	cursor: pointer;
@@ -48,9 +37,6 @@ td.pw3 {
 /* Other misc styles */
 .margin_bottom {
 	margin-bottom: 5px;
-}
-.animation {
-	/* animation: wheel 2s infinite ease-in-out; */
 }
 
 #icon {
@@ -122,22 +108,7 @@ td.pw3 {
 	top: 0;
 	transform: translate(-50%, -50%);
 }
-
-/* @keyframes wheel {
-    from {
-        transform: scale(1);
-        transition: 0.3s;
-    }
-    50% {
-        transform: scale(1.3);
-        transition: 0.3s;
-    }
-    to {
-        transform: scale(1);
-        transition: 0.3s;
-    }
-} */
-
+/*animation win*/
 .hb-wrapper {
 	width: 100%;
 	height: 100%;
@@ -159,3 +130,4 @@ td.pw3 {
 	color: #006bd3;
 	text-shadow: 0 0 10px #ccc;
 }
+/*animation win*/
